<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/add"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/optionsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textConfig"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/city"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textGeoposition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/geoposition"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textCityList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cityList"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contentPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/optionsPanel"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/cityPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible" >

            <EditText
                android:id="@+id/editCity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/geoPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible" >

            
            <fragment 
          android:id="@+id/map"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:name="com.google.android.gms.maps.MapFragment"/>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible" >

            <Spinner
                android:id="@+id/citiesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/cities_array"
                android:prompt="@string/cities_prompt" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textConfirm"
        android:layout_below="@+id/contentPanel"
        android:gravity="center"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="20sp" />

</RelativeLayout>